<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/text_in_textview_home_fragment"/>


    <item
        android:id="@+id/navigation_gift"
        android:icon="@drawable/baseline_card_giftcard_24"
        android:title="@string/string_textview_gift_fragment"/>

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/string_textview_cart_fragment"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/string_textview_setting_fragment"/>


</menu>